--- a/SS/lab1/Makefile
+++ b/SS/lab1/Makefile
@@ -10,7 +10,7 @@ run: main
 	./main
 
 main: $(SRC)
-	$(CC) $(CFLAGS) -o main $(SRC)
+	$(CC) $(CFLAGS) -o main -DDEBUGER $(SRC)
 
 clean:
 	rm -f main
